# arxiv-feed

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  Dockerfile  Dockerfile-feed  Makefile  Pipfile  README.md  app.py  cloudbuild.yaml  default.nix  docker-compose.yml  lintstats.sh  main.py  mypy.ini  pyproject.toml  setup.cfg  wsgi.py
.github/workflows/: python-app.yml
example/: paper_ids.txt
feed/: __init__.py  config.py  consts.py  controller.py  database.py  domain.py  errors.py  factory.py  fetch_data.py  index.py  routes.py  tables.py  utils.py
feed/serializers/: __init__.py  atom_1_0.py  atom_extensions.py  extensions.py  feed.py  rss_2_0.py  serializer.py
feed/tests/: conftest.py  test_consts.py  test_fetching.py  test_routes.py  test_typings.py  test_utils.py
feed/tests/data/: test_data.db
feed/tests/serializers/: test_feed.py  test_serialize.py
rss/: __init__.py  celeryconfig.py  config.py  consts.py  controller.py  controllers.py  domain.py  errors.py  factory.py  index.py  routes.py  utils.py
rss/serializers/: __init__.py  atom.py  atom_1_0.py  atom_extensions.py  rss.py  rss_2_0.py  serializer.py
tests/: __init__.py  lint.sh  test_typings.py
