[tool.poetry]
name = "feed"
version = "1.1.2"
description = "arXiv feeds"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "656c8e841a2c610019f19fff8cc8d13d0983e377"}
feedgen = "==0.9.0"
flask = "^3"
Flask-SQLAlchemy = "^3"  
SQLAlchemy = "^2"
mysqlclient = "~=2.2.0"
werkzeug = "*"

[tool.poetry.dev-dependencies]

mypy = "*"
pylint = "^2"
pytest = "^7"
pytest-cov = "^2"
pytest-flask = "^1"
pytest-mock = "^3"